--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ arxiv==2.1.3
 asgiref==3.8.1
 asttokens==2.4.1
 async-lru==2.0.4
+async-timeout==5.0.1
 attrs==24.2.0
+av==14.4.0
 babel==2.16.0
 backoff==2.2.1
 bcrypt==4.2.0
@@ -35,11 +37,13 @@ chroma-hnswlib==0.7.3
 chromadb==0.4.24
 click==8.1.7
 cohere==5.9.0
+colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
 contourpy==1.3.0
 cryptography==43.0.0
 cssselect2==0.8.0
+ctranslate2==4.6.0
 cycler==0.12.1
 dataclasses-json==0.6.7
 datasets==2.21.0
@@ -52,6 +56,7 @@ dill==0.3.8
 dirtyjson==1.0.8
 distro==1.9.0
 docx2txt==0.8
+durationpy==0.10
 EbookLib==0.18
 effdet==0.4.1
 elastic-transport==8.15.0
@@ -63,6 +68,7 @@ executing==2.0.1
 faiss-cpu==1.8.0.post1
 fastapi==0.112.2
 fastavro==1.9.5
+faster-whisper==1.1.1
 fastjsonschema==2.20.0
 feedparser==6.0.11
 filelock==3.15.4
@@ -90,6 +96,7 @@ greenlet==3.0.3
 grpc-gateway-protoc-gen-openapiv2==0.1.0
 grpcio==1.66.1
 grpcio-status==1.48.2
+gTTS==2.5.4
 h11==0.14.0
 httpcore==1.0.5
 httplib2==0.22.0
@@ -101,6 +108,7 @@ humanfriendly==10.0
 idna==3.8
 importlib_metadata==8.4.0
 importlib_resources==6.4.4
+iniconfig==2.1.0
 iopath==0.1.10
 ipykernel==6.29.5
 ipython==8.27.0
@@ -119,82 +127,49 @@ jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 jupyter==1.1.1
 jupyter-console==6.6.3
-jupyter-events==0.10.0
+jupyter-events==0.12.0
 jupyter-lsp==2.2.5
-jupyter_client==8.6.2
+jupyter_client==8.6.3
 jupyter_core==5.7.2
-jupyter_server==2.14.2
+jupyter_server==2.16.0
 jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
+jupyterlab==4.4.2
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-kiwipiepy==0.17.1
-kiwipiepy_model==0.17.0
-kiwisolver==1.4.5
-konlpy==0.6.0
-kubernetes==30.1.0
-langchain==0.2.15
-langchain-anthropic==0.1.23
-langchain-chroma==0.1.3
-langchain-cohere==0.1.9
-langchain-community==0.2.15
-langchain-core==0.2.37
-langchain-elasticsearch==0.2.2
-langchain-experimental==0.0.61
-langchain-google-genai==1.0.10
-langchain-huggingface==0.0.3
-langchain-milvus==0.1.4
-langchain-openai==0.1.23
-langchain-teddynote==0.0.28
-langchain-text-splitters==0.2.2
-langchain-upstage==0.1.8
-langchainhub==0.1.21
-langdetect==1.0.9
-langgraph==0.0.69
-langsmith==0.1.108
-lark==1.2.2
-layoutparser==0.3.4
-llama-index-core==0.10.68.post1
-llama-index-readers-file==0.1.33
-llama-parse==0.4.9
-lxml==5.3.0
-lz4==4.3.3
-Markdown==3.7
+jupyterlab_widgets==3.0.15
+kiwisolver==1.4.8
+kubernetes==32.0.1
+langchain-core==0.3.60
+langchain-openai==0.3.17
+langchain-pinecone==0.2.6
+langchain-tests==0.3.19
+langsmith==0.3.42
+lxml==5.4.0
 markdown-it-py==3.0.0
-markdown2==2.5.3
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-matplotlib==3.9.2
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-mistune==3.0.2
-mmh3==4.1.0
-monotonic==1.6
+mistune==3.1.3
+mmh3==5.1.0
 mpmath==1.3.0
-msg-parser==1.2.0
-multidict==6.0.5
+multidict==6.4.4
 multiprocess==0.70.16
-mypy-extensions==1.0.0
-narwhals==1.6.0
-nbclient==0.10.0
-nbconvert==7.16.4
+mypy_extensions==1.1.0
+narwhals==1.40.0
+nbclient==0.10.2
+nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.3
-nltk==3.9.1
-notebook==7.2.2
+networkx==3.4.2
+notebook==7.4.2
 notebook_shim==0.2.4
 numpy==1.26.4
 oauthlib==3.2.2
-olefile==0.47
 omegaconf==2.3.0
-onnx==1.14.1
-onnxruntime==1.19.0
-open_clip_torch==2.26.1
-openai==1.43.0
-opencv-python==4.10.0.84
-openpyxl==3.1.5
+onnxruntime==1.22.0
+openai==1.79.0
 opentelemetry-api==1.27.0
 opentelemetry-exporter-otlp-proto-common==1.27.0
 opentelemetry-exporter-otlp-proto-grpc==1.27.0
@@ -205,147 +180,106 @@ opentelemetry-proto==1.27.0
 opentelemetry-sdk==1.27.0
 opentelemetry-semantic-conventions==0.48b0
 opentelemetry-util-http==0.48b0
-orjson==3.10.7
+orjson==3.10.18
 overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
+packaging==24.2
+pandas==2.2.3
 pandocfilters==1.5.1
 parameterized==0.9.0
 parso==0.8.4
-pdf2image==1.17.0
-pdfminer.six==20231228
-pdfplumber==0.11.4
 pexpect==4.9.0
-pillow==10.4.0
-pinecone-client==3.2.2
-pinecone-text==0.9.0
-platformdirs==4.2.2
-portalocker==2.10.1
-posthog==3.6.0
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-proto-plus==1.24.0
+pillow==11.2.1
+pinecone==6.0.2
+pinecone-plugin-interface==0.0.7
+platformdirs==4.3.8
+pluggy==1.6.0
+portalocker==3.1.1
+posthog==4.0.1
+prometheus_client==0.22.0
+prompt_toolkit==3.0.51
+propcache==0.3.1
+proto-plus==1.26.1
 protobuf==3.20.3
-psutil==6.0.0
+psutil==7.0.0
 ptyprocess==0.7.0
-pulsar-client==3.5.0
+pulsar-client==3.7.0
 pure_eval==0.2.3
-pyarrow==17.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pyclipper==1.3.0.post5
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycocotools==2.0.8
 pycparser==2.22
-pydantic==2.9.0b2
-pydantic_core==2.23.1
-pydeck==0.9.1
-pydyf==0.11.0
-Pygments==2.18.0
-pymilvus==2.4.6
-PyMuPDF==1.24.9
-pymupdf4llm==0.0.12
-PyMuPDFb==1.24.9
-pypandoc==1.13
-pyparsing==3.1.4
-pypdf==4.3.1
-pypdfium2==4.30.0
-pyphen==0.17.2
+pydantic==2.11.4
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyparsing==3.2.3
 PyPika==0.48.9
-pyproject_hooks==1.1.0
-pysbd==0.3.4
-pytesseract==0.3.13
+pyproject_hooks==1.2.0
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-socket==0.7.0
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
-python-dotenv==1.0.1
-python-iso639==2024.4.27
-python-json-logger==2.0.7
-python-magic==0.4.27
-python-multipart==0.0.9
-python-pptx==0.6.21
-pytz==2024.1
+python-dotenv==1.1.0
+python-json-logger==3.3.0
+pytz==2025.2
 PyYAML==6.0.2
-pyzmq==26.2.0
-ragas==0.1.15
-rank-bm25==0.2.2
-rapidfuzz==3.9.6
-rapidocr-onnxruntime==1.3.24
-redis==5.0.8
-referencing==0.35.1
-regex==2024.7.24
+pyzmq==26.4.0
+referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==13.8.0
-rpds-py==0.20.0
-rsa==4.9
-s3transfer==0.10.2
-safetensors==0.4.4
-scikit-learn==1.5.1
-scipy==1.14.1
-seaborn==0.13.2
+rich==14.0.0
+rpds-py==0.25.0
+rsa==4.9.1
+s3transfer==0.10.4
+safetensors==0.5.3
 Send2Trash==1.8.3
-sentence-transformers==3.0.1
 sgmllib3k==1.0.0
-shapely==2.0.6
 shellingham==1.5.4
-simsimd==5.0.1
-six==1.16.0
-smmap==5.0.1
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.32
+soupsieve==2.7
 stack-data==0.6.3
-starlette==0.38.2
-streamlit==1.38.0
-striprtf==0.0.26
-sympy==1.13.2
-tabulate==0.9.0
-tenacity==8.3.0
+starlette==0.38.6
+sympy==1.14.0
+syrupy==4.9.1
+tenacity==9.1.2
 terminado==0.18.1
-threadpoolctl==3.5.0
-tiktoken==0.7.0
-timm==1.0.9
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-tokenizers==0.19.1
-toml==0.10.2
-torch==2.2.2
-torchvision==0.17.2
-tornado==6.4.1
-tqdm==4.66.5
+tiktoken==0.9.0
+timm==1.0.15
+tinycss2==1.2.1
+tokenizers==0.21.1
+torch==2.7.0
+torchvision==0.22.0
+tornado==6.5
+tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.44.2
-typer==0.12.5
-types-python-dateutil==2.9.0.20240821
-types-requests==2.32.0.20240712
+typer==0.15.4
+types-python-dateutil==2.9.0.20250516
+types-requests==2.32.0.20250515
 typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.1
-ujson==5.10.0
-unstructured==0.10.19
-unstructured-inference==0.6.6
-unstructured.pytesseract==0.3.13
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
 uri-template==1.3.0
 uritemplate==4.1.1
-urllib3==2.2.2
-uvicorn==0.30.6
-watchfiles==0.24.0
+urllib3==2.4.0
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==1.0.5
 wcwidth==0.2.13
-weasyprint==65.1
-webcolors==24.8.0
+webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
-websockets==13.0.1
-wget==3.2
-widgetsnbextension==4.0.13
-wrapt==1.16.0
-xlrd==2.0.1
-XlsxWriter==3.2.0
+websockets==15.0.1
+widgetsnbextension==4.0.14
+wrapt==1.17.2
 xxhash==3.5.0
-yarl==1.9.6
-zipp==3.20.1
-zopfli==0.2.3.post1
-faster-whisper==1.1.1
-gTTS==2.5.4
-openai-whisper==20240930
+yarl==1.20.0
+zipp==3.21.0
+zstandard==0.23.0
