--- a/requirements.txt
+++ b/requirements.txt
@@ -261,6 +261,8 @@ tqdm==4.67.1
 traitlets==5.14.3
 typer==0.15.4
 types-python-dateutil==2.9.0.20250516
+pydantic-settings==2.2.1
+python-multipart==0.0.9
 types-requests==2.32.0.20250515
 typing-inspect==0.9.0
 typing-inspection==0.4.0
